--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -124,6 +124,10 @@ a.del-user-btn {
     color: #999;
 }
 
+.set-input-icon svg g g {
+    transition: 0.2s ease-in-out;
+}
+
 table.set-email-pass {
     border-spacing: 0px 0px;
     margin: 5px;
