Refactor signup form's errors handling.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1225,11 +1225,8 @@ p.have-account {
     margin-bottom: 15px;
 }
 
-.not-visible {
+.login-er, .sign-er {
     display: none;
-}
-
-.sign-er {
     position: absolute;
     top: 5px;
     left: 5px;
