Fix problem with form inputs' icons when resetting errors - share form.

--- a/app/views/shares/_error.js.erb
+++ b/app/views/shares/_error.js.erb
@@ -3,19 +3,19 @@ var type = '<%= type %>';
 <% unless errors[:title].empty? %>
     <% error = "Title #{ errors[:title][0] }" %>
     $('#' + type + 'title-icon').replaceWith("<%= j(render partial: 'shared/warning', locals: { id: type + 'title-icon', error: error, extra: 'sh-warning'  }) %>");
-    resetShWarningIcon('title', '#share_title', form, type);
+    resetShWarningIcon('title', 'heart', '#share_title', form, type);
 <% end %>
 
 <% unless errors[:message].empty? %>
     <% error = "Message #{ errors[:message][0] }" %>
     $('#' + type + 'message-icon').replaceWith("<%= j(render partial: 'shared/warning', locals: { id: type + 'message-icon', error: error, extra: 'sh-warning' }) %>");
-    resetShWarningIcon('message', '#share_message', form, type);
+    resetShWarningIcon('message', 'comment', '#share_message', form, type);
 <% end %>
 
 <% unless errors[:shared].empty? %>
     <% error = "#{ errors[:shared][0] }" %>
     $('#' + type + 'shared-icon').replaceWith("<%= j(render partial: 'shared/warning', locals: { id: type + 'shared-icon', error: error, extra: 'sh-warning' }) %>");
-    resetShWarningIcon('shared', '.sh-check', form, type);
+    resetShWarningIcon('shared', 'tag', '.sh-check', form, type);
 <% end %>
 
 resetShErrorsWithResetButton(type);
