--- a/app/views/shares/create.js.erb
+++ b/app/views/shares/create.js.erb
@@ -2,4 +2,4 @@ $("#active-shares").html("<%= j(render 'active_shares') %>");
 convertTimeToLocal('.time');
 resetShForm('share-form');
 activateEditShLink();
-copyShareLinks()
+copyShareLinks();
