--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -6,6 +6,11 @@
     color: $light_grey;
 }
 
+.coll-require {
+    font-size: 14px;
+    padding-left: 5px;
+}
+
 .destroy-coll-icon {
     position: relative;
     top: -3px;
@@ -40,37 +45,39 @@
     background: $warning;
 }
 
-#coll-modal .uk-modal-body {
-    border-radius: 5px;
-
-    .header {
-        font-size: 20px;
-        margin-bottom: 20px;
-        color: #333;
-    }
-
-    padding: 20px;
-    font-size: 14px;
-    width: 450px;
-    color: $dark_grey;
-}
-
 #coll-icon-input {
     position: absolute;
-    top: 6px;
-    left: 3px;
+    top: 5px;
+    left: 6px;
+
+    svg path {
+        transition: 0.2s ease-in-out;
+    }
+}
+
+.coll-er {
+    display: none;
+    position: absolute;
+    top: 5px;
+    left: 6px;
+}
+
+.coll-field:focus ~ span svg path {
+    stroke: #666;
 }
 
 .small {
     font-size: 12px;
     font-style: italic;
-    color: $light_grey;
+    color: #888;
+    margin: 10px 0px 20px;
 }
 
 .add-coll-icon {
     position: relative;
-    left: 9px;
-    top: -5px;
+    top: -2px;
+    vertical-align: text-bottom;
+    padding-left: 10px;
 }
 
 .uk-checkbox:disabled {
