Finish delete collection confirm modal.

--- a/app/views/layouts/_modals.html.erb
+++ b/app/views/layouts/_modals.html.erb
@@ -2,7 +2,7 @@
   <div id="coll-del-modal" class="uk-flex-top" uk-modal="bg-close: false">
     <div class="uk-modal-dialog uk-modal-body">
       <div class="modal-header">
-        <p class="header">Delete <span id="sad-coll"></span> collection<span class='add-coll-icon'><%= svg 'shelf_icon' %></span></p>
+        <p class="header">Delete <span id="sad-coll"></span> collection?<span class='add-coll-icon'><%= svg 'shelf_icon' %></span></p>
       </div>
       <div class="modal-content"></div>
     </div>
