--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1156,12 +1156,9 @@ li.active:hover .opts {
 }
 
 .uk-modal-body {
-    background-color: white;
-    border-radius: 5px 5px 0px 0px;
+    background-color: #ececec;
+    border-radius: 5px;
     padding: 20px;
-    font-size: 20px;
-    width: 450px;
-    color: $dark_grey;
 }
 
 // Form - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
