--- a/app/views/collections/destroy.js.erb
+++ b/app/views/collections/destroy.js.erb
@@ -1,3 +1,5 @@
+UIkit.modal($("#coll-del-modal")).hide();
+
 var ids = [];
 $('li[id^=mc-]').each(function(){ ids.push(this.id)});
 var index = ids.indexOf('mc-<%= @collection.id %>');
