Finish styling delete collection confirmation modal.

--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -130,6 +130,11 @@
 
 .lp-big {
     line-height: 46px;
+
+    span {
+        padding-right: 2px;
+    }
+
     svg {
         position: relative;
         top: -1px;
