--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -13,7 +13,7 @@
 
 #coll-icon-input {
     position: absolute;
-    top: 5px;
+    top: 6px;
     left: 6px;
 
     svg path {
@@ -55,3 +55,23 @@ label.disabled {
 }
 
 // Delete Collection Modal
+
+#sad-coll {
+    font-size: 22px;
+    color: #777;
+}
+
+.cancel-del {
+    float: right;
+}
+
+p.all-lost {
+    border-bottom: 1px solid #afafaf;
+    padding-bottom: 5px;
+}
+
+.del-f svg {
+    position: relative;
+    top: -1px;
+    transition: 0.1s ease-in-out;
+}
