--- a/app/views/collections/_delete_form.html.erb
+++ b/app/views/collections/_delete_form.html.erb
@@ -1,3 +1,8 @@
 <p class="all-lost">All games in this collection will be lost!</p>
-<button id="coll-uff" class="uk-button sh-button">Cancel</button>
-<%= link_to 'Delete', collection_url(coll_id), method: :delete, remote: true, class: 'uk-button sh-button' %>
+<div class="cancel-del">
+<button id="coll-uff" class="uk-button lp-button del-f">
+<span uk-icon="close"></span> Cancel</button>
+<%= link_to collection_url(coll_id), method: :delete, remote: true, class: 'uk-button lp-button del-f' do %>
+<span uk-icon="trash"></span> Delete
+<% end %>
+</div>
