--- a/app/views/layouts/_modals.html.erb
+++ b/app/views/layouts/_modals.html.erb
@@ -1,6 +1,7 @@
 <% if logged_in? %>
-  <div id="coll-del-modal" class="uk-flex-top" uk-modal="bg-close: false">
+  <div id="coll-del-modal" class="uk-flex-top" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
+      <button class="uk-modal-close-default" type="button" uk-close></button>
       <div class="modal-header">
         <p class="header">Delete <span id="sad-coll"></span> collection?<span class='add-coll-icon'><%= svg 'shelf_icon' %></span></p>
       </div>
