--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -19,7 +19,7 @@
 
   <div>
   <%= link_to 'http://localhost:3000/shared/Htv1mh2ez-NbC13a6egYLgM6Aes', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
-    <%= svg 'shelf28' %>
+    <span><%= svg 'shelf28' %></span>
     View a sample collection
   <% end %>
   </div>
@@ -27,7 +27,7 @@
   <div>
     <div uk-lightbox>
         <a class="uk-button lp-button lp-play lp-big" href="https://www.youtube-nocookie.com/watch?v=QBOeCu3ina4">
-        <%= svg 'play' %>
+        <span><%= svg 'play' %></span>
         Watch app overview
         </a>
     </div>
