--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1467,15 +1467,23 @@ span.add-form-errors {
 
 a.hide-labels {
     font-size: 12px;
-    color: #999;
-    border: thin solid #bababa;
-    padding: 2px 5px;
+    color: #666;
+    border: thin solid #afafaf;
     border-radius: 3px;
+    padding: 2px 0px;
+    display: block;
+    width: 80px;
+    text-align: center;
+    margin-top: 10px;
+    transition: 0.1s ease-in-out;
+    position: relative;
+    z-index: 1;
 
     &:hover {
         text-decoration: none;
-        color: #666;
+        color: #444;
         border-color: #777;
+        background-color: #d1d1d1;
     }
 }
 
