Add minor fixes to games forms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1346,9 +1346,9 @@ p.have-account {
     background: #afafaf;
 }
 
-.add-form.white-form .strike > span:after {
-    background: #C8C8C8;
-}
+// .add-form.white-form .strike > span:after {
+//     background: #C8C8C8;
+// }
 
 .strike > span:before {
     right: 100%;
