--- a/app/views/search/_add_form.html.erb
+++ b/app/views/search/_add_form.html.erb
@@ -1,5 +1,5 @@
 <div class="action uk-grid-collapse" uk-grid>
-    <div class="inputs">
+    <div>
         <label class="c-m chosen">Add</label>
     </div>
     <div class="cf-name uk-text-truncate uk-width-expand">
