--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -73,7 +73,7 @@
           <% end %>
         <% end %>
       </div>
-      <%= content_tag(:div, id: "add-form-#{ x_id }", class: 'add-form white-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
+      <%= content_tag(:div, id: "add-form-#{ x_id }", class: 'add-form wf', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
         <span class="loading">Loading</span>
       <% end %>
       <% end %>
